# private-context-inference-gateway

./: .dockerignore  .gitignore  Dockerfile  README.md  cost-optimization-strategy.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
audit/: store.py
context/: assembly.py  authorization.py  schema.py
data/: synthetic_family.py
docs/: ADR-0001-inference-gateway-boundary.md  IMPL_COST_MODEL_V2_fleet_economics.md  REPORT_cost_model_v2.md
eval/: gate.py  judge.py  leaky_assembly.py  privacy_asserts.py
eval/scenarios/: product_scenarios.json
evidence/: __main__.py
gateway/: app.py  composition.py  contract.py  engine.py  fallback.py  router.py
serving/: clients.py  deploy_modal.py  loadtest.py  local_ollama.md  vllm_config.md
telemetry/: context_dist.py  cost.py
tests/: test_app.py  test_audit_store.py  test_authorization_assembly.py  test_clients.py  test_context_dist.py  test_contract.py  test_cost.py  test_loadtest.py  test_router.py
