[project]
name = "private-context-inference-gateway"
version = "0.1.0"
description = "Privacy-filtered, cost-aware inference gateway over self-hosted and hosted LLMs"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110",
]

[project.optional-dependencies]
serve = [
    "modal>=0.64",
]
hosted = [
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "uvicorn>=0.29",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gateway", "context", "serving", "telemetry", "eval", "data", "audit", "evidence"]

[tool.pytest.ini_options]
testpaths = ["tests"]
